# sami_juce

./: .gitignore  .gitmodules  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  build.bat  build.sh
choc/gui/: choc_DesktopWindow.h  choc_WebView.h
choc/platform/: choc_DynamicLibrary.h
sami/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  addressbook.pb.cc  addressbook.pb.h  sami_WebViewComponent.cpp  sami_WebViewComponent.h  sami_WebViewContainer.cpp  sami_WebViewContainer.h
sami/DSP/: sami_params.cpp  sami_params.hpp  sami_webview_adapter.cpp  sami_webview_adapter.hpp  sami_webview_adapter_distributor.cpp  sami_webview_adapter_distributor.hpp  sampler.txt
sami/GUI/: message_passing.txt  sami_WebView.h  sami_WebViewComponent.cpp  sami_WebViewComponent.h  sami_WebViewContainer.cpp  sami_WebViewContainer.h  sami_Webview.cpp  sami_callbacks.hpp  sami_webview_adapter.cpp  sami_webview_adapter.hpp
sami/GUI/sami_gui/: index.html  package-lock.json  package.json
sami/GUI/sami_gui/public/: messages.proto
sami/GUI/sami_gui/src/: App.tsx  bindings
sami/GUI/sami_gui/src/components/: sami.tsx
sami/GUI/sami_gui/src/components/tests/: BasicRangeInput.tsx  BasicSwitch.tsx
sami/GUI/sami_gui/src/hooks/: useBoolParam.tsx  useFloatParam.tsx  useGesture.tsx  usePluginInit.tsx
sami/GUI/sami_gui/src/props/: rangeProps.ts  switchProps.ts
sami/GUI/sami_gui/src/styles/: app.css
sami/GUI/sami_message_parser/: Cargo.toml  build.rs
sami/GUI/sami_message_parser/bindings/: BoolUpdate.ts  Empty.ts  FloatUpdate.ts  GestureUpdate.ts  IntUpdate.ts  Message.ts  MessageType.ts  Target.ts
sami/GUI/sami_message_parser/src/: lib.rs  message.rs  message_types.rs  messages.rs
sami/GUI/sami_message_parser/src/messages/: init.js  inits.rs  message_types.rs  targets.rs  updates.rs
sami/GUI/sami_message_parser/src/messages/targets/: setters.rs
sami/GUI/sami_message_parser/src/messages/updates/: float.rs
sami/proto/: messages.pb.cc  messages.pb.h  messages.proto
sami/sami_gui/: package-lock.json
sami/sami_gui/src/: App.tsx
sami/sami_rs/: Cargo.toml
sami/sami_rs/bindings/: MessageType.ts  Target.ts
sami/sami_rs/src/: lib.rs  sampler.rs
sami/sami_rs/src/messages/: targets.rs
sami/sami_rs/src/messages/targets/: setters.rs
sami/sami_rs/src/messages/updates/: bool_update.rs  gesture.rs  int.rs
sami/sami_rs/src/sampler/: files.rs  midi.rs  sample.rs
sami/sami_rs/src/sampler/sample/: create.rs  state.rs  wav_parser.rs
