[package]
name = "sami_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "sami_rs"
crate-type = ["staticlib"]

[dependencies]
serde = {version ="1.0.159" ,features = ["derive"]} 
serde_json = "1.0.95"
ts-rs = "6.2.1"
cxx = "1.0"
strum = {version="0.24.1", features = ["strum_macros"]}
strum_macros = "0.24.3"
wmidi = "4.0.6"
byteorder = "1.4.3"

[build-dependencies]
cxx-build = "1.0"
